--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true">
         <activity
             android:name=".activity.ImageSelectActivity"
-            android:theme="@style/ImageSelectorNoActionBar">
+            android:theme="@style/ImageSelectorFullScreen">
         </activity>
         <activity
             android:name=".activity.ImageShowActivity"
@@ -23,12 +23,32 @@
         <activity
             android:name=".activity.ImageSelectLandActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/ImageSelectorNoActionBar">
+            android:theme="@style/ImageSelectorFullScreen">
         </activity>
         <activity
             android:name=".activity.ImageSelectPortActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/ImageSelectorNoActionBar">
+            android:theme="@style/ImageSelectorFullScreen">
+        </activity>
+        <activity
+            android:name=".activity.ImageShowLandActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/ImageSelectorFullScreen">
+        </activity>
+        <activity
+            android:name=".activity.ImageShowPortActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/ImageSelectorFullScreen">
+        </activity>
+        <activity
+            android:name=".activity.ImageViewPagerShowPortActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/ImageSelectorFullScreen">
+        </activity>
+        <activity
+            android:name=".activity.ImageViewPagerShowLandActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/ImageSelectorFullScreen">
         </activity>
     </application>
 
