全屏显示 ,  横竖屏设置

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
             android:theme="@style/ImageSelectorFullScreen">
         </activity>
         <activity
+            android:screenOrientation="behind"
             android:name=".activity.ImageShowActivity"
             android:theme="@style/ImageSelectorFullScreen">
         </activity>
