--- a/imageSelectorlibrary/build.gradle
+++ b/imageSelectorlibrary/build.gradle
@@ -20,9 +20,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     //gson
-    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
     //glide
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
     //photoView 图片view
-    implementation 'com.github.chrisbanes.photoview:library:1.2.4'
+//    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 }
