--- a/imageSelectorlibrary/src/main/AndroidManifest.xml
+++ b/imageSelectorlibrary/src/main/AndroidManifest.xml
@@ -1,60 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.waterfairy.imageselect">
+    package="com.waterfairy.imageselect">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:supportsRtl="true">
         <activity
             android:name=".activity.ImageSelectActivity"
-            android:theme="@style/ImageSelectorNoActionBar">
-        </activity>
+            android:screenOrientation="behind"
+            android:theme="@style/ImageSelectorNoActionBar" />
         <activity
             android:name=".activity.ImageShowActivity"
             android:screenOrientation="behind"
-            android:theme="@style/ImageSelectorNoActionBar">
-        </activity>
+            android:theme="@style/ImageSelectorNoActionBar" />
         <activity
             android:name=".activity.ImageViewPagerPreviewActivity"
-            android:theme="@style/ImageSelectorFullScreen">
-        </activity>
+            android:screenOrientation="behind"
+            android:theme="@style/ImageSelectorFullScreen" />
         <activity
             android:name=".activity.ImageSelectLandActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/ImageSelectorNoActionBar">
-        </activity>
+            android:theme="@style/ImageSelectorNoActionBar" />
         <activity
             android:name=".activity.ImageSelectPortActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/ImageSelectorNoActionBar">
-        </activity>
-        <activity
-            android:name=".activity.ImageShowLandActivity"
-            android:screenOrientation="landscape"
-            android:theme="@style/ImageSelectorNoActionBar">
-        </activity>
-        <activity
-            android:name=".activity.ImageShowPortActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/ImageSelectorNoActionBar">
-        </activity>
-        <activity
-            android:name=".activity.ImageViewPagerPreviewPortActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/ImageSelectorFullScreen">
-        </activity>
-        <activity
-            android:name=".activity.ImageViewPagerPreviewLandActivity"
-            android:screenOrientation="landscape"
-            android:theme="@style/ImageSelectorFullScreen">
-        </activity>
+            android:theme="@style/ImageSelectorNoActionBar" />
         <activity
             android:name=".activity.ImageViewPagerShowActivity"
             android:screenOrientation="behind"
-            android:theme="@style/ImageSelectorNoActionBar"/>
+            android:theme="@style/ImageSelectorNoActionBar" />
+        <activity android:name=".test.TestActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
