--- a/imageSelectorlibrary/build.gradle
+++ b/imageSelectorlibrary/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.0.0'
     //photoView 图片view
 //    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
