--- a/imageSelectorlibrary/src/main/AndroidManifest.xml
+++ b/imageSelectorlibrary/src/main/AndroidManifest.xml
@@ -61,6 +61,9 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"/>
         </provider>
+
+        <activity android:name=".activity.ImgCropActivity">
+        </activity>
     </application>
 
 </manifest>
