--- a/imageSelectorlibrary/src/main/AndroidManifest.xml
+++ b/imageSelectorlibrary/src/main/AndroidManifest.xml
@@ -51,16 +51,16 @@
             </intent-filter>
         </activity>
 
-        <!-- 文件访问权限 -->
-        <provider
-            android:name=".utils.Provider"
-            android:authorities="com.waterfairy.imageselect.fileProvider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"/>
-        </provider>
+        <!--&lt;!&ndash; 文件访问权限 &ndash;&gt;-->
+        <!--<provider-->
+            <!--android:name=".utils.Provider"-->
+            <!--android:authorities="com.waterfairy.imageselect.fileProvider"-->
+            <!--android:exported="false"-->
+            <!--android:grantUriPermissions="true">-->
+            <!--<meta-data-->
+                <!--android:name="android.support.FILE_PROVIDER_PATHS"-->
+                <!--android:resource="@xml/file_paths"/>-->
+        <!--</provider>-->
 
         <activity android:name=".activity.ImgCropActivity">
         </activity>
