--- a/imageSelectorlibrary/build.gradle
+++ b/imageSelectorlibrary/build.gradle
@@ -18,11 +18,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     //gson
     implementation 'com.google.code.gson:gson:2.8.2'
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 //    implementation 'com.github.bumptech.glide:glide:3.7.0'
     //photoView 图片view
 //    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
